upgrade linearization analyzer